--- a/qbittorrent/docker-compose.yaml
+++ b/qbittorrent/docker-compose.yaml
@@ -17,3 +17,8 @@ services:
       - WEBUI_PORT=8080
     networks:
       - media-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.qbittorrent.rule=Host(`qbittorrent.local`)"
+      - "traefik.http.routers.qbittorrent.entrypoints=web"
+      - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
