--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 include:
+  - traefik/docker-compose.yml
+  - dashboard/docker-compose.yml
   - jellyfin/docker-compose.yml
   - jellyseerr/docker-compose.yml
   - servarr/docker-compose.yml
