--- a/servarr/docker-compose.yml
+++ b/servarr/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - TZ=UTC
     networks:
       - media-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.sonarr.rule=Host(`sonarr.local`)"
+      - "traefik.http.routers.sonarr.entrypoints=web"
+      - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
 
   radarr:
     image: linuxserver/radarr:latest
@@ -32,6 +37,11 @@ services:
       - TZ=UTC
     networks:
       - media-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.radarr.rule=Host(`radarr.local`)"
+      - "traefik.http.routers.radarr.entrypoints=web"
+      - "traefik.http.services.radarr.loadbalancer.server.port=7878"
 
   prowlarr:
     image: linuxserver/prowlarr:latest
@@ -47,6 +57,11 @@ services:
       - TZ=UTC
     networks:
       - media-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.prowlarr.rule=Host(`prowlarr.local`)"
+      - "traefik.http.routers.prowlarr.entrypoints=web"
+      - "traefik.http.services.prowlarr.loadbalancer.server.port=9696"
 
   bazarr:
     image: linuxserver/bazarr:latest
@@ -64,3 +79,8 @@ services:
       - TZ=UTC
     networks:
       - media-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.bazarr.rule=Host(`bazarr.local`)"
+      - "traefik.http.routers.bazarr.entrypoints=web"
+      - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
