feat: add Cloudflare Tunnel configuration and setup instructions

--- a/.env.template
+++ b/.env.template
@@ -9,7 +9,7 @@ PGID=1000
 TZ=UTC
 
 # Network name (change if you want a different network name)
-NETWORK_NAME=media_media-network
+NETWORK_NAME=media-network
 
 # Data paths (relative to the media directory)
 MOVIES_PATH=./data/movies
@@ -26,3 +26,8 @@ SONARR_DOMAIN=sonarr${DOMAIN_SUFFIX}
 RADARR_DOMAIN=radarr${DOMAIN_SUFFIX}
 PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
 QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
+
+# Cloudflare Tunnel Configuration
+# Get this token from your Cloudflare Zero Trust dashboard
+# Visit: https://one.dash.cloudflare.com/ -> Access -> Tunnels
+CLOUDFLARE_TUNNEL_TOKEN=your_tunnel_token_here
