feat: enhance media stack configuration with dynamic domain support and health checks

--- a/.env.template
+++ b/.env.template
@@ -25,6 +25,7 @@ FILEBROWSER_DOMAIN=filebrowser${DOMAIN_SUFFIX}
 SONARR_DOMAIN=sonarr${DOMAIN_SUFFIX}
 RADARR_DOMAIN=radarr${DOMAIN_SUFFIX}
 PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
+BAZARR_DOMAIN=bazarr${DOMAIN_SUFFIX}
 QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
 
 # Cloudflare Tunnel Configuration
