--- a/servarr/docker-compose.yml
+++ b/servarr/docker-compose.yml
@@ -7,17 +7,23 @@ services:
       - "8989:8989"
     volumes:
       - ./sonarr/config:/config
-      - /mnt/external/tv:/tv
-      - /mnt/external/downloads:/downloads
+      - ${TV_PATH:-/mnt/external/tv}:/tv
+      - ${DOWNLOADS_PATH:-/mnt/external/downloads}:/downloads
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=UTC
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=${TZ:-UTC}
     networks:
       - media-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8989/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.sonarr.rule=Host(`sonarr.local`)"
+      - "traefik.http.routers.sonarr.rule=Host(`${SONARR_DOMAIN:-sonarr.local}`)"
       - "traefik.http.routers.sonarr.entrypoints=web"
       - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
 
@@ -29,17 +35,23 @@ services:
       - "7878:7878"
     volumes:
       - ./radarr/config:/config
-      - /mnt/external/movies:/movies
-      - /mnt/external/downloads:/downloads
+      - ${MOVIES_PATH:-/mnt/external/movies}:/movies
+      - ${DOWNLOADS_PATH:-/mnt/external/downloads}:/downloads
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=UTC
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=${TZ:-UTC}
     networks:
       - media-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7878/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.radarr.rule=Host(`radarr.local`)"
+      - "traefik.http.routers.radarr.rule=Host(`${RADARR_DOMAIN:-radarr.local}`)"
       - "traefik.http.routers.radarr.entrypoints=web"
       - "traefik.http.services.radarr.loadbalancer.server.port=7878"
 
@@ -52,14 +64,20 @@ services:
     volumes:
       - ./prowlarr/config:/config
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=UTC
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=${TZ:-UTC}
     networks:
       - media-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9696/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.prowlarr.rule=Host(`prowlarr.local`)"
+      - "traefik.http.routers.prowlarr.rule=Host(`${PROWLARR_DOMAIN:-prowlarr.local}`)"
       - "traefik.http.routers.prowlarr.entrypoints=web"
       - "traefik.http.services.prowlarr.loadbalancer.server.port=9696"
 
@@ -71,16 +89,22 @@ services:
       - "6767:6767"
     volumes:
       - ./bazarr/config:/config
-      - /mnt/external/movies:/movies
-      - /mnt/external/tv:/tv
+      - ${MOVIES_PATH:-/mnt/external/movies}:/movies:ro
+      - ${TV_PATH:-/mnt/external/tv}:/tv:ro
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=UTC
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=${TZ:-UTC}
     networks:
       - media-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6767/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.bazarr.rule=Host(`bazarr.local`)"
+      - "traefik.http.routers.bazarr.rule=Host(`${BAZARR_DOMAIN:-bazarr.local}`)"
       - "traefik.http.routers.bazarr.entrypoints=web"
       - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
