--- a/dashboard/nginx.conf
+++ b/dashboard/nginx.conf
@@ -15,12 +15,12 @@ http {
         
         location / {
             root   /usr/share/nginx/html;
-            index  mobile-dashboard.html;
+            index  dashboard.html;
         }
         
         # Redirect root to mobile dashboard
         location = / {
-            return 301 /mobile-dashboard.html;
+            return 301 /dashboard.html;
         }
         
         error_page   500 502 503 504  /50x.html;
