--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -21,6 +21,12 @@ services:
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
       - '--web.enable-admin-api'
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 128M
     networks:
       - media-network
     healthcheck:
@@ -53,6 +59,12 @@ services:
       - PGID=${PGID:-472}
       - TZ=${TZ:-UTC}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     networks:
       - media-network
     depends_on:
@@ -84,6 +96,12 @@ services:
     devices:
       - /dev/kmsg:/dev/kmsg
     privileged: true
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     networks:
       - media-network
     labels:
@@ -111,6 +129,12 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 32M
     networks:
       - media-network
     healthcheck:
