feat: integrate Fail2ban for enhanced security and add configuration details in README

--- a/.env.template
+++ b/.env.template
@@ -32,3 +32,13 @@ QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
 # Get this token from your Cloudflare Zero Trust dashboard
 # Visit: https://one.dash.cloudflare.com/ -> Access -> Tunnels
 CLOUDFLARE_TUNNEL_TOKEN=your_tunnel_token_here
+
+# Fail2ban Configuration (optional)
+# Email notifications for banned IPs
+FAIL2BAN_EMAIL=
+FAIL2BAN_SENDER=fail2ban@localhost
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_TLS=YES
