--- a/servarr/docker-compose.yml
+++ b/servarr/docker-compose.yml
@@ -16,9 +16,9 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
+          memory: 1G
         reservations:
-          memory: 128M
+          memory: 256M
     networks:
       - media-network
     healthcheck:
@@ -116,9 +116,9 @@ services:
     deploy:
       resources:
         limits:
-          memory: 256M
+          memory: 512M
         reservations:
-          memory: 64M
+          memory: 128M
     networks:
       - media-network
     healthcheck:
