--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     ports:
       - "3000:80"
+      - "3002:3002"  # Health check API port
     environment:
       - TZ=${TZ:-UTC}
     networks:
@@ -14,9 +15,13 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 30s  # Allow more time for Node.js to start
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard.rule=Host(`dashboard${DOMAIN_SUFFIX:-.local}`)"
       - "traefik.http.routers.dashboard.entrypoints=web"
       - "traefik.http.services.dashboard.loadbalancer.server.port=80"
+      # Health API routing
+      - "traefik.http.routers.dashboard-api.rule=Host(`dashboard${DOMAIN_SUFFIX:-.local}`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.dashboard-api.entrypoints=web"
+      - "traefik.http.services.dashboard-api.loadbalancer.server.port=3002"
