--- a/dashboard/nginx.conf
+++ b/dashboard/nginx.conf
@@ -11,14 +11,29 @@ http {
     
     server {
         listen       80;
-        server_name  localhost;
+        server_name  _;  # Accept all hostnames
         
+        # Serve static dashboard files
         location / {
             root   /usr/share/nginx/html;
             index  dashboard.html;
+            try_files $uri $uri/ /dashboard.html;
         }
         
-        # Redirect root to mobile dashboard
+        # Proxy API requests to Node.js health check service
+        location /api/ {
+            proxy_pass http://127.0.0.1:3002;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+        
+        # Redirect root to dashboard
         location = / {
             return 301 /dashboard.html;
         }
