feat: integrate Gluetun VPN for qBittorrent with Mullvad WireGuard support

--- a/.env.template
+++ b/.env.template
@@ -33,6 +33,31 @@ QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
 # Visit: https://one.dash.cloudflare.com/ -> Access -> Tunnels
 CLOUDFLARE_TUNNEL_TOKEN=your_tunnel_token_here
 
+# VPN Configuration (for qBittorrent protection via Gluetun)
+# VPN Provider and Type
+VPN_PROVIDER=mullvad
+VPN_TYPE=wireguard
+
+# Mullvad WireGuard Configuration
+# Get these from: https://mullvad.net/en/account/wireguard-config
+# Generate a key and copy the private key and address
+WIREGUARD_PRIVATE_KEY='your_wireguard_private_key_here'
+WIREGUARD_ADDRESSES=10.x.x.x/32
+
+# VPN Server Selection
+# Choose a city close to you for best performance
+# Examples: Chicago, Los Angeles, London, Tokyo
+VPN_SERVER_CITIES=Chicago
+
+# Port Forwarding (optional, improves seeding)
+# Request a port from Mullvad account, then set it here
+VPN_INPUT_PORTS=6881
+
+# Firewall Configuration
+# Docker network subnet (check with: docker network inspect media-network)
+# and your local LAN subnet
+FIREWALL_OUTBOUND_SUBNETS=172.18.0.0/16,192.168.1.0/24
+
 # Fail2ban Configuration (optional)
 # Email notifications for banned IPs
 FAIL2BAN_EMAIL=
