feat: initialize web UI with Next.js and Tailwind CSS
- Add package.json for project dependencies and scripts
- Create postcss.config.mjs for Tailwind CSS integration
- Add public directory with .gitkeep for static assets
- Implement admin dashboard page with authentication check
- Create admin login page with authentication form
- Add API routes for login and logout functionality
- Implement health check API for services
- Create global CSS file with Tailwind CSS directives
- Set up root layout and main page structure
- Develop ServiceCard component for displaying service status
- Add authentication utility for session management
- Define service URLs and health endpoints in services.ts
- Create TypeScript interfaces for service data structures
- Configure Tailwind CSS with custom color themes
- Set up TypeScript configuration for the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 include:
   - traefik/docker-compose.yml
   - fail2ban/docker-compose.yml
-  - dashboard/docker-compose.yml
-  - public-dashboard/docker-compose.yml
+  - web-ui/docker-compose.yml
   - jellyfin/docker-compose.yml
   - jellyseerr/docker-compose.yml
   - servarr/docker-compose.yml
