fix: expose qBittorrent WebUI through Gluetun’s firewall

--- a/.env.template
+++ b/.env.template
@@ -52,6 +52,7 @@ VPN_SERVER_CITIES=Chicago
 # Port Forwarding (optional, improves seeding)
 # Request a port from Mullvad account, then set it here
 VPN_INPUT_PORTS=6881
+FIREWALL_INPUT_PORTS=8080
 
 # Firewall Configuration
 # Docker network subnet (check with: docker network inspect media-network)
