--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
       - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS:-172.18.0.0/16,192.168.1.0/24}
       - FIREWALL_VPN_INPUT_PORTS=${VPN_INPUT_PORTS:-6881}
+      - FIREWALL_INPUT_PORTS=${FIREWALL_INPUT_PORTS:-8080}
       - TZ=${TZ:-UTC}
       - HTTPPROXY=off
       - SHADOWSOCKS=off
