fix: align VPN docs with updated compose env handling

--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -42,14 +42,11 @@ services:
       - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
       - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS:-172.18.0.0/16,192.168.1.0/24}
       - FIREWALL_VPN_INPUT_PORTS=${VPN_INPUT_PORTS:-6881}
-      - FIREWALL_INPUT_PORTS=${FIREWALL_INPUT_PORTS:-8080}
       - TZ=${TZ:-UTC}
       - HTTPPROXY=off
       - SHADOWSOCKS=off
-      - DOT=${GLUETUN_DOT:-on}
-      - DOT_PROVIDERS=${GLUETUN_DOT_PROVIDERS:-quad9,cloudflare}
-      - HEALTH_TARGET_ADDRESS=${GLUETUN_HEALTH_TARGET_ADDRESS:-1.1.1.1:443}
-      - HEALTH_TARGET_ADDRESS_FALLBACK=${GLUETUN_HEALTH_TARGET_FALLBACKS:-cloudflare-dns.com:443,quad9.net:443}
+      - HEALTH_VPN_DURATION_INITIAL=20s
+      - HEALTH_VPN_DURATION_ADDITION=10s
     volumes:
       - ./gluetun:/gluetun
     networks:
