--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -8,13 +8,14 @@ services:
       - gluetun
     volumes:
       - ./qbittorrent/config:/config
-      - ${DOWNLOADS_PATH:-/mnt/external/downloads}:/downloads
+      - ${DOWNLOADS_PATH:-/mnt/external}/qbittorrent/downloads:/downloads
+      - ${DOWNLOADS_PATH:-/mnt/external}/qbittorrent/incomplete:/incomplete
     environment:
-      - PUID=${PUID:-1000}
+      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
       - PGID=${PGID:-1000}
+      - PUID=${PUID:-1000}
       - TZ=${TZ:-UTC}
       - WEBUI_PORT=8080
-      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
     deploy:
       resources:
         limits:
@@ -35,18 +36,17 @@ services:
       - "6881:6881"
       - "6881:6881/udp"
     environment:
-      - VPN_SERVICE_PROVIDER=${VPN_PROVIDER:-mullvad}
-      - VPN_TYPE=${VPN_TYPE:-wireguard}
-      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
-      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
-      - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
       - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS:-172.18.0.0/16,192.168.1.0/24}
       - FIREWALL_VPN_INPUT_PORTS=${VPN_INPUT_PORTS:-6881}
-      - TZ=${TZ:-UTC}
+      - HEALTH_TARGET_ADDRESS=1.1.1.1:443
       - HTTPPROXY=off
+      - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
       - SHADOWSOCKS=off
-      - HEALTH_VPN_DURATION_INITIAL=20s
-      - HEALTH_VPN_DURATION_ADDITION=10s
+      - TZ=${TZ:-UTC}
+      - VPN_SERVICE_PROVIDER=${VPN_PROVIDER:-mullvad}
+      - VPN_TYPE=${VPN_TYPE:-wireguard}
+      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
+      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
     volumes:
       - ./gluetun:/gluetun
     networks:
@@ -58,7 +58,20 @@ services:
       retries: 3
       start_period: 30s
     labels:
+      - "autoheal=true"
       - "traefik.enable=true"
       - "traefik.http.routers.qbittorrent.rule=Host(`${QBITTORRENT_DOMAIN:-qbittorrent.local}`)"
       - "traefik.http.routers.qbittorrent.entrypoints=web"
       - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
+
+  autoheal:
+    image: willfarrell/autoheal:latest
+    container_name: autoheal
+    restart: unless-stopped
+    environment:
+      - AUTOHEAL_CONTAINER_LABEL=autoheal
+      - AUTOHEAL_INTERVAL=60
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - media-network
