feat: add SERVER_IP to .env.template

--- a/.env.template
+++ b/.env.template
@@ -27,6 +27,7 @@ RADARR_DOMAIN=radarr${DOMAIN_SUFFIX}
 PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
 BAZARR_DOMAIN=bazarr${DOMAIN_SUFFIX}
 QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
+SERVER_IP=192.168.86.1
 
 # Cloudflare Tunnel Configuration
 # Get this token from your Cloudflare Zero Trust dashboard
